dashboard and profile features

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -23,5 +23,16 @@
   "authUserRegistered": "Registration successful!",
 
   "textFormFieldValidatorRequired": "This field is required",
-  "textFormFieldValidatorPasswordMismatch": "Password do not match"
+  "textFormFieldValidatorPasswordMismatch": "Password do not match",
+
+  "dashboardTabItemTitleHome": "Home",
+  "dashboardTabItemTitleWorkout": "Workouts",
+  "dashboardTabItemTitleLesson": "Lessons",
+  "dashboardTabItemTitleShop": "Shop",
+  "dashboardTabItemTitleProfile": "Profile",
+
+  "profilePopupItemTitleEdit": "Edit",
+  "profilePopupItemTitleLogout": "Log out",
+  "editButtonSave": "Save",
+  "buttonDelete": "Delete"
 }
